# kitoken

./: .browserslistrc  .gitattributes  .gitignore  .npmrc  .rustfmt.toml  Cargo.toml  README.md  astro.config.mjs  biome.json  eslint.config.js  package.json  panda.config.ts  pnpm-lock.yaml  postcss.config.js  tsconfig.json
.github/workflows/: publish-javascript.yml  publish-python.yml  publish.yml  py.yml  tests.yml
benches/: bench_encode_cl100k.rs  bench_encode_gpt2.rs  bench_encode_llama2.rs  bench_encode_mistral.rs  bench_encode_nerdstash.rs  bench_encode_xlnet.rs  util.rs
benches/data/: pride_and_prejudice.txt  wagahai.txt
public/: llama2.kit  manifest.json
src/: charsmap.rs  config.rs  convert.rs  decoder.rs  definition.rs  encoder.rs  env.d.ts  lib.rs  main.rs  normalization.rs  regex.rs  serialization.rs  util.rs  vocab.rs  web.rs
src/components/: ButtonBar.astro  InputControls.astro  TokenControls.astro  TokenOutput.astro  editor.tsx
src/config/: decoding.rs  normalization.rs  processing.rs  split.rs
src/convert/: huggingface.rs  sentencepiece.rs  tekken.rs  tiktoken.rs  tokenizers.rs  util.rs  util_old.rs
src/editor/: editor.tsx  utils.ts
src/editor/plugins/: editor.tsx
src/encoder/: bytepair.rs  unigram.rs  wordpiece.rs
src/layouts/: Base.astro
src/pages/: index.astro
src/stores/: index.ts
src/utils/: environment.ts  escape-regexp.ts  hash.ts
styles/: global.css  reset.css
styles/fonts/: geist-mono.css  geist.css  iawriterq.css  inter.css  satoshi.css
styles/system/css/: conditions.js  css.js
styles/system/jsx/: column.d.ts  column.js  fill.d.ts  fill.js  index.d.ts  index.js  row.d.ts  row.js
styles/system/patterns/: column.d.ts  column.js  fill.d.ts  fill.js  index.d.ts  index.js  row.d.ts  row.js
styles/system/tokens/: index.js  tokens.d.ts
styles/system/types/: conditions.d.ts  prop-type.d.ts  style-props.d.ts  system-types.d.ts
tests/: test_convert_hf_gpt2.rs  test_convert_hf_llama2.rs  test_convert_hf_xlnet.rs  test_convert_sentencepiece.rs  test_convert_sp_llama2.rs  test_convert_sp_mistral.rs  test_convert_sp_nerdstash.rs  test_convert_sp_xlnet.rs  test_convert_tekken.rs  test_convert_tiktoken.rs  test_convert_tokenizers.rs  test_convert_tt_cl100k.rs  test_convert_tt_p50k.rs  util.rs
tests/data/: mixed_input.txt  small_input.txt  small_output_xlnet.txt  small_tokens_cl100k.txt  small_tokens_mistral.txt  small_tokens_nerdstash.txt  small_tokens_p50k.txt  utf8_tokens_cl100k.txt  utf8_tokens_gpt2.txt  utf8_tokens_llama2.txt  utf8_tokens_mistral.txt  utf8_tokens_nerdstash.txt  utf8_tokens_p50k.txt  utf8_tokens_xlnet.txt
tests/data/sentencepiece/: mixed_output_nai-t5.txt  mixed_output_xlnet_base_cased.txt  mixed_tokens_gemma.txt  mixed_tokens_mistral03.txt  mixed_tokens_nai-t5.txt  mixed_tokens_nerdstash.txt  mixed_tokens_xlnet_base_cased.txt  small_output_nai-t5.txt  small_output_xlnet_base_cased.txt  small_tokens_gemma.txt  small_tokens_llama2.txt  small_tokens_mistral01.txt  small_tokens_mistral03.txt  small_tokens_nai-t5.txt  small_tokens_nerdstash.txt  small_tokens_xlnet_base_cased.txt  utf8_output_nai-t5.txt  utf8_output_nerdstash.txt  utf8_output_xlnet_base_cased.txt  utf8_tokens_gemma.txt  utf8_tokens_mistral.txt  utf8_tokens_mistral03.txt  utf8_tokens_nai-t5.txt  utf8_tokens_nerdstash.txt  utf8_tokens_xlnet_base_cased.txt
tests/data/tekken/: mixed_tokens_nemo.txt  small_tokens_mistral35.txt  utf8_tokens_nemo.txt
tests/data/tiktoken/: mixed_tokens_cl100k_base.txt  mixed_tokens_kimi_k2.txt  mixed_tokens_p50k_base.txt  small_tokens_cl100k_base.txt  small_tokens_kimi_k2.txt  small_tokens_o200k_base.txt  small_tokens_p50k_base.txt  utf8_tokens_cl100k_base.txt  utf8_tokens_kimi_k2.txt  utf8_tokens_llama4.txt  utf8_tokens_o200k_base.txt  utf8_tokens_p50k_base.txt
tests/data/tokenizers/: mixed_output_bert_base_cased.txt  mixed_output_clip_base.txt  mixed_output_gpt_neox.txt  mixed_output_gte.txt  mixed_output_hw_doc_summarizer.txt  mixed_output_mistral01.txt  mixed_output_sqlpilot.txt  mixed_output_xlnet_base_cased.txt  mixed_tokens_bert_base_cased.txt  mixed_tokens_clip_base.txt  mixed_tokens_gemma4.txt  mixed_tokens_glm46.txt  mixed_tokens_gpt2.txt  mixed_tokens_gpt_oss.txt  mixed_tokens_gte.txt  mixed_tokens_hw_doc_summarizer.txt  mixed_tokens_llama2.txt  mixed_tokens_llama32-instruct.txt  mixed_tokens_llama4.txt  mixed_tokens_mistral01.txt  mixed_tokens_mistral03.txt  mixed_tokens_mistral2.txt  mixed_tokens_modernbert.txt  mixed_tokens_qwen35.txt  mixed_tokens_r1.txt  mixed_tokens_sqlpilot.txt  mixed_tokens_xlnet_base_cased.txt  small_output_bert_base_cased.txt  small_output_clip_base.txt  small_output_gte.txt  small_output_hw_doc_summarizer.txt  small_output_llama2.txt  small_output_mistral03.txt  small_output_modernbert.txt  small_output_mpt.txt  small_output_sqlpilot.txt  small_output_xlnet_base_cased.txt  small_tokens_bert_base_cased.txt  small_tokens_clip_base.txt  small_tokens_gemma3.txt  (+39 more)
tests/models/: xlnet_base_cased.json
tests/models/sentencepiece/: nai-t5.model
tests/models/tokenizers/: gpt2.json  hw_doc_summarizer.json  modernbert.json  sqlpilot.json
